# rescue-line-2022

./: .gitmodules  123.py  README.md  greensquares  p2.py  remove+conturs.py  гистограмма  эрозия
doc/: doc.org  preamble.tex
doc/exports/: doc.odt  doc.tex
hardware/: differential.py  gear.py
software/: .gitignore  pyrightconfig.json
software/embedded/: Cargo.toml  Embed.toml
software/embedded/.cargo/: config
software/embedded/a49xx/: Cargo.toml
software/embedded/a49xx/src/: lib.rs
software/embedded/dc_motor/: Cargo.toml
software/embedded/dc_motor/src/: lib.rs
software/embedded/encoder/: Cargo.toml
software/embedded/encoder/src/: lib.rs
software/embedded/main/: Cargo.toml
software/embedded/main/src/: line_sensor.rs  main.rs
software/embedded/motor/: Cargo.toml
software/embedded/motor/src/: lib.rs
software/embedded/rotary_encoder/: Cargo.toml
software/embedded/rotary_encoder/src/: lib.rs
software/embedded/servo/: Cargo.toml
software/embedded/servo/src/: lib.rs
software/embedded/src/: main.rs
software/embedded/stepper/: Cargo.toml
software/embedded/wheel/: Cargo.toml
software/interfacing/: Cargo.toml
software/interfacing/src/: commands.rs  lib.rs  message.rs
software/interfacing_py/: Cargo.toml  pyproject.toml  test.py
software/interfacing_py/interfacing_py/: __init__.py
software/interfacing_py/src/: lib.rs
software/main/: intersections.py  line_following.py  main.py  robot.py  settings.py
software/vision/: camera.py  colors.py  common.py  intersection.py  line.py  pyrightconfig.json  test.py  window.py
(+2 files in other folders)
