[package]
name = "embedded"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "embedded"
bench = false
test = false

[dependencies]
nb = "1.0.0"
cortex-m = "0.7"
cortex-m-rt = "0.7"

embedded-hal = { version = "0.2.6", features = ["unproven"] }
stm32f4xx-hal = { version = "0.11.1", features = ["rt", "stm32f401", "usb_fs", "rtic"] }

fugit = "0.3.3"

rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-probe = "0.3.0"

cortex-m-rtic = "1.0.0"
rtic-monotonic = { version = "1.0" }

gpio-expander = "0.1.0"

itertools = { version = "0.10.5", default-features = false}
numtoa = "0.2.4"

stepper = { path = "../stepper" }
interfacing = { path = "../../interfacing", default-features = false }
